@@ -1,8 +1,8 @@
 package edu.br.ufpe.cin.sword.cm.prover;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
@@ -14,7 +14,7 @@ import edu.br.ufpe.cin.sword.cm.tree.FailProofTree;
 import edu.br.ufpe.cin.sword.cm.tree.ProofTree;
 import edu.br.ufpe.cin.sword.cm.tree.ProofTreeFactory;
 
-public class SimpleProver<Literal, ConnectionState, CopyState> {
+public class SimpleProver<Literal, ConnectionState, CopyState> implements Prover<Literal> {
 
 	private final ConnectionStrategy<Literal, ConnectionState> connStrategy;
 	private final CopyStrategy<Literal, CopyState> copyStrategy;
@@ -23,10 +23,9 @@ public class SimpleProver<Literal, ConnectionState, CopyState> {
 	private final ProofTreeFactory<Literal> proofFactory;
 
 	public SimpleProver(LiteralHelperStrategy<Literal> litHelperStrategy,
-			ConnectionStrategy<Literal, ConnectionState> connStrategy, 
+			ConnectionStrategy<Literal, ConnectionState> connStrategy,
 			CopyStrategy<Literal, CopyState> copyStrategy,
 			BlockingStrategy<Literal, ConnectionState, CopyState> blockingStrategy) {
-		super();
 		this.connStrategy = connStrategy;
 		this.copyStrategy = copyStrategy;
 		this.litHelperStrategy = litHelperStrategy;
@@ -34,31 +33,35 @@ public class SimpleProver<Literal, ConnectionState, CopyState> {
 		this.proofFactory = new ProofTreeFactory<Literal>();
 	}
 
-	public ProofTree<Literal> prove(Collection<Collection<Literal>> matrix) {
+	public ProofTree<Literal> prove(List<List<Literal>> matrix) {
+		if (matrix == null || matrix.isEmpty()) {
+			return proofFactory.ax(Set.of());
+		}
+
 		connStrategy.clear();
 		copyStrategy.clear();
 
 		CopyState copyState = copyStrategy.getState();
-		for (Collection<Literal> clause : matrix) {
-			Optional<Collection<Literal>> copyClause = copyStrategy.copy(clause);
+		for (List<Literal> clause : matrix) {
+			Optional<List<Literal>> copyClause = copyStrategy.copy(clause);
 
-			if (copyClause.isPresent()) {
+			if (copyClause.isPresent() && !copyClause.get().isEmpty()) {
 
-				ProofTree<Literal> proof = proveClause(copyClause.get(), matrix, Collections.emptySet());
+				ProofTree<Literal> proof = proveClause(copyClause.get(), matrix, Set.of());
 
 				if (!(proof instanceof FailProofTree)) {
-					System.out.println(connStrategy.getState());
-					return proofFactory.st(copyClause.get(), Collections.emptySet(), proof);
+					return proofFactory.st(copyClause.get(), Set.of(), proof);
 				}
-					
+
 				copyStrategy.setState(copyState);
 			}
 		}
-		
+
 		return proofFactory.fail(null, null);
 	}
 
-	private ProofTree<Literal> proveClause(Collection<Literal> clause, Collection<Collection<Literal>> matrix, Set<Literal> path) {		
+	private ProofTree<Literal> proveClause(List<Literal> clause, List<List<Literal>> matrix,
+			Set<Literal> path) {
 		if (clause.isEmpty())
 			return proofFactory.ax(path);
 
@@ -67,7 +70,7 @@ public class SimpleProver<Literal, ConnectionState, CopyState> {
 
 		ConnectionState connState = connStrategy.getState();
 		for (Literal negLiteral : litHelperStrategy.complementaryOf(literal, path)) {
-			if (connStrategy.connect(literal, negLiteral)) {	
+			if (connStrategy.connect(literal, negLiteral)) {
 
 				ProofTree<Literal> subProof = proveClause(minus(clause, literal), matrix, path);
 
@@ -80,21 +83,22 @@ public class SimpleProver<Literal, ConnectionState, CopyState> {
 
 		CopyState copyState = copyStrategy.getState();
 
-		for (Collection<Literal> matrixClause : matrix) {
-			Optional<Collection<Literal>> copyClause = copyStrategy.copy(matrixClause);
+		for (List<Literal> matrixClause : litHelperStrategy.complementaryOf(literal, matrix)) {
+			Optional<List<Literal>> copyClause = copyStrategy.copy(matrixClause);
 
 			if (copyClause.isPresent()) {
 				for (Literal negLiteral : litHelperStrategy.complementaryOf(literal, copyClause.get())) {
-					
-					if (connStrategy.connect(literal, negLiteral) 
-							&& !blockingStrategy.isBlocked(negLiteral, path, connStrategy.getState(), copyStrategy.getState())) {
-					
+
+					if (connStrategy.connect(literal, negLiteral)
+							&& !blockingStrategy.isBlocked(negLiteral, path, connStrategy.getState(),
+									copyStrategy.getState())) {
+
 						ProofTree<Literal> subProofLeft = proveClause(minus(copyClause.get(), negLiteral), matrix,
 								add(path, literal));
-	
+
 						if (!(subProofLeft instanceof FailProofTree)) {
 							ProofTree<Literal> subProofRight = proveClause(minus(clause, literal), matrix, path);
-	
+
 							if (!(subProofRight instanceof FailProofTree)) {
 								return proofFactory.ext(clause, path, subProofLeft, subProofRight);
 							}
@@ -112,18 +116,18 @@ public class SimpleProver<Literal, ConnectionState, CopyState> {
 		return proofFactory.fail(clause, path);
 	}
 
-	private Set<Literal> add(Collection<Literal> previousSet, Literal toAdd) {
+	private Set<Literal> add(Set<Literal> previousSet, Literal toAdd) {
 		Set<Literal> newSet = new HashSet<>();
 		newSet.addAll(previousSet);
 		newSet.add(toAdd);
 		return newSet;
 	}
 
-	private Set<Literal> minus(Collection<Literal> previousSet, Literal toRemove) {
-		Set<Literal> newSet = new HashSet<>();
-		newSet.addAll(previousSet);
-		newSet.remove(toRemove);
-		return newSet;
+	private List<Literal> minus(List<Literal> previousList, Literal toRemove) {
+		List<Literal> newList = new ArrayList<>();
+		newList.addAll(previousList);
+		newList.remove(toRemove);
+		return newList;
 	}
 
 }
